# Highfleet-Modloader

./: .gitignore  CMakeLists.txt  Cargo.toml  Highfleet Modloader.sln  README.md
.github/workflows/: msbuild.yml
DLL/: CMakeLists.txt  DLL.vcxproj  DLL.vcxproj.filters  Shipworks.json  Shipyard.json  dllmain.cpp  mem.cpp  mem.h  shipworks.h
Highfleet Modloader/: Highfleet Modloader.vcxproj  Main.cpp
HighfleetModloader/: CMakeLists.txt
Injector/: CMakeLists.txt  Inject.cpp  Inject.h  Main.cpp
Loader/: CMakeLists.txt  DllMain.cpp
ShipworksExtended/: CMakeLists.txt  Shipworks.json  dllmain.cpp  shipworks.cpp  shipworks.h  shipworksASM.asm
mod-interface/: Interface.h  MetaInfo.h
src/: Inject.cpp  Inject.h  Main.cpp  export_indices.rs  lib.rs  loader.rs  orig_exports.rs  proxied_exports.rs  versioning.rs
