[package]
name = "highfleet-loader"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxygen-macros = "0.5.1"
libc = "0.2.149"
libloading = "0.8"
log = "0.4.*"
sha2 = "0.10.*"
flexi_logger = "0.29.0"
winapi = { version = "0.3.9", features = [
    "minwindef",
    "libloaderapi",
    "processthreadsapi",
    "consoleapi",
    "processenv",
    "winbase",
    "winuser",
    "errhandlingapi",
] }


[lib]
name = "bass"
crate-type = ["cdylib"]
